--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
 	<script src="https://d3js.org/d3-tile.v0.0.min.js"></script>
 	<script src="https://d3js.org/topojson.v1.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	
 	<script src="js/auto_zoom.js"></script>
+	<script src="js/preload_images.js"></script>
 </body>
 </html>
