Some more styling

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" href="css/styles.css" />
 	<style>
 	#counter {
+		display: none;
 		position: fixed;
 		right: 10px;
 		top: 10px;
@@ -28,7 +29,7 @@
 	<svg></svg>
 	<div id="counter"></div>
 	<div id="story-wrapper">
-		<p>Something is burning on the Myanmar border.</p>
+		<p>Something is burning on Myanmar&rsquo;s western border.</p>
 		<p>What is it?</p>
 		<p>It's villages where Rohingya Muslims used to live.</p>
 		<p>They've been driven from their homes.</p>
