Place legend on timeline map

--- a/index.html
+++ b/index.html
@@ -88,8 +88,12 @@
 
 
 	    <div class="chart-title">Villages burned all across northwest Rakhine</div>
-	    <div class="chart-subtitle">Location of <span class="red-color">burning villages</span> by day, <span class="timeline-date"></span> </div>
+	    <div class="chart-subtitle">Location of <span class="red-color">burning villages</span> by day, Aug. 25 - Sep. 11</div>
 	    <div id="timeline-map">
+	    	<div class="timeline-legend">
+	    		<div class="timeline-date"></div>
+	    		<div class="timeline-villages"></div>
+	    	</div>
 
 	    	
 	    </div>
