Minify CSS and JS

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css" />
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/fonts/FontAwesome.otf" />
-		<link rel="stylesheet" href="css/template.css" />
-		<link rel="stylesheet" href="css/styles.css" />
+		<link rel="stylesheet" href="css/template.min.css" />
+		<link rel="stylesheet" href="css/styles.min.css" />
  		
  		<!-- social tags -->
     <meta property="og:url" content="http://www.hindustantimes.com/interactives/rohingya-villages-burning-in-myanmar-rakhine/" />
@@ -240,8 +240,8 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 		<script src="http://www.hindustantimes.com/static/common/js/jquery.smartresize.js"></script>
 
-		<script src="js/template.js"></script>
-		<script src="js/scripts.js"></script>
+		<script src="js/template.min.js"></script>
+		<script src="js/scripts.min.js"></script>
 		<script src="js/preload_images.js"></script>
 
 		<script type="text/javascript">
