--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Rohingya villages burnt to the ground in Myanmar, sparking one of world’s worst refugee crises | Hindustan Times</title>
-		<meta name="keywords" content="Myanmar, Rohingya, Rakhine, Aung San Suu Kyi, refugee crisis, satellite images, burning villages" />
+		<meta name="keywords" content="Myanmar, Rohingya, Rohingya news, Myanmar news, Rakhine, Aung San Suu Kyi, refugee crisis, satellite images, burning villages" />
     <meta name="description" content="Satellites have photographed scores of burning villages near Myanmar’s western border."/>
     <link rel="canonical" content="http://www.hindustantimes.com/interactives/rohingya-villages-burning-myanmar-rakhine" />
 
